# archr-flasher

./: .gitignore  README.md
.github/workflows/: build.yml
assets/i18n/: en.json  pt-BR.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: archr-dtbo.py
src-tauri/src/: diaglog.rs  disk.rs  dtb_to_overlay.rs  dtbo_builder.rs  flash.rs  flash_linux.rs  flash_macos.rs  flash_windows.rs  flashwrite.rs  github.rs  main.rs  overlay.rs  panel_config.rs  panels.rs  rawwrite_unix.rs  win7_shim.c
src/i18n/: en.json  es.json  pt-BR.json  ru.json  zh.json
