[package]
name = "archr-flasher"
version = "0.1.0"
description = "Arch R SD Card Flasher"
authors = ["Arch R Linux"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
xz2 = "0.1"
sys-locale = "0.3"
sha2 = "0.10"
fs2 = "0.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
