[package]
name = "archr-flasher"
version = "1.3.6"
description = "Arch R SD Card Flasher"
authors = ["Arch R Linux"]
edition = "2024"
default-run = "archr-flasher"

# The GUI app is the only binary in this crate. The privileged
# disk-write helper is NOT a separate binary; it runs as the
# `__flash-write` subcommand of this same binary (see src/flashwrite.rs).
# Keeping a single binary is deliberate: a second [[bin]] made the Tauri
# bundler ship the wrong executable, so the installed app would not
# start. Declared explicitly + default-run to lock the choice in.
[[bin]]
name = "archr-flasher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
xz2 = { version = "0.1", features = ["static"] }
flate2 = "1"
sys-locale = "0.3"
sha2 = "0.10"
fs2 = "0.4"
md-5 = "0.10"
libc = "0.2"
# Vendored with a relaxed FAT type check: the ArchR boot partition is a
# below-minimum-cluster-count FAT32 the vendor U-Boots require, which
# stock fatfs (and the macOS msdos driver) refuse. See vendor/fatfs/VENDORED.md.
fatfs = { path = "vendor/fatfs" }
fscommon = "0.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
